@@ -47,6 +47,7 @@
 #include "ScriptSourceCode.h"
 #include "ScriptState.h"
 #include "Widget.h"
+#include "XSSAuditor.h"
 
 #include "V8Binding.h"
 #include "V8NPObject.h"
@@ -94,6 +95,7 @@ ScriptController::ScriptController(Frame* frame)
 #if ENABLE(NETSCAPE_PLUGIN_API)
     , m_windowScriptNPObject(0)
 #endif
+    , m_XSSAuditor(new XSSAuditor(frame))
 {
 }
 
@@ -186,6 +188,11 @@ void ScriptController::evaluateInNewContext(const Vector<ScriptSourceCode>& sour
 // Evaluate a script file in the environment of this proxy.
 ScriptValue ScriptController::evaluate(const ScriptSourceCode& sourceCode)
 {
+    if (!m_XSSAuditor->canEvaluate(sourceCode)) {
+        // This script is not safe to be evaluated.
+        return JSValue();
+    }
+
     v8::HandleScope handleScope;
     v8::Handle<v8::Context> context = V8Proxy::GetContext(m_proxy->frame());
     if (context.IsEmpty())
